# natch

./: .gitignore  .gitmodules  ALL_TYPES.md  FINE_PLAN.md  README.md  RELEASE_PROCESS.md  mix.exs
.github/workflows/: precompile.yml
bench/: complex_types_bench.exs  helpers.ex  natch_only_bench.exs  natch_vs_pillar_bench.exs
lib/: chex.ex  natch.ex
lib/chex/: block.ex  column.ex  connection.ex  conversion.ex  error.ex  native.ex
lib/natch/: connection.ex  conversion.ex
native/chex_fine/: CMakeLists.txt
native/chex_fine/src/: column.cpp  select.cpp
research/: BINARY_PASSTHROUGH.md  GITHUB_RELEASE_PLAN.md  PERF.md
test/: array_integration_test.exs  bang_test.exs  benchmark_test.exs  block_test.exs  column_test.exs  connection_test.exs  conversion_test.exs  error_connection_test.exs  nesting_integration_test.exs  query_test.exs  timeout_integration_test.exs
